feat: add SSH passphrase to deployment workflow for enhanced security

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -79,6 +79,7 @@ jobs:
         username: ${{ secrets.HOSTINGER_USERNAME }}
         key: ${{ secrets.HOSTINGER_SSH_KEY }}
         port: ${{ secrets.HOSTINGER_PORT }}
+        passphrase: ${{ secrets.HOSTINGER_SSH_PASSPHRASE }}
         script: |
           echo "=========================================="
           echo "  🚀 Deploy Automático - Banca Jornal"
