feat: implementar nginx reverse proxy com path /bancajornal, portas customizadas (8090/8443) e health checks

--- a/BancaJornal.Api/appsettings.Production.json
+++ b/BancaJornal.Api/appsettings.Production.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Microsoft.AspNetCore.HealthChecks": "Information"
     },
     "File": {
       "Path": "/app/logs/bancajornal-.log",
@@ -13,6 +14,7 @@
     }
   },
   "AllowedHosts": "*",
+  "PathBase": "/bancajornal",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/app/data/bancajornal.db"
   },
@@ -27,5 +29,12 @@
         "Url": "http://0.0.0.0:80"
       }
     }
+  },
+  "ForwardedHeaders": {
+    "ForwardedForHeaderName": "X-Forwarded-For",
+    "ForwardedProtoHeaderName": "X-Forwarded-Proto",
+    "ForwardLimit": 1,
+    "KnownNetworks": [],
+    "KnownProxies": []
   }
 }
